Ben & Jerry's API modifications
